# MuseIC

./: CMakeLists.txt  README.md  cmake_help.txt  cmake_installer.py  cmake_uninstaller.py  help.txt  run.sh
data/: com.github.bcedu.MuseIC.appdata.xml  com.github.bcedu.MuseIC.desktop  com.github.bcedu.museic.appdata.xml  com.github.bcedu.museic.desktop  com.github.bcedu.museic.glade  com.github.bcedu.museic.gschema.xml  museic_window.glade
debian/: changelog  control  copyright
po/: CMakeLists.txt
src/: Gui.vala  StreamPlayer.vala  config.vala  config.vala.cmake  museIC.vala  muse_ic.vala  museic.vala  museic_dbus.vala  museic_file.vala  museic_filelist.vala  museic_gui.vala  museic_library.vala  museic_remote.vala  museic_streamplayer.vala  museic_window.glade  settings.vala
src/css/: main.css
src/html/: client.html
